--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         10:18pm, and I'm creating a fake Medium page 🙃
       </p>
       <h2>
-        I hit a wall at the halway point...
+        I hit a wall at the halfway point...
       </h2>
       <p>
         Fatigue set in and the returns were diminishing. I needed
